syntax = "proto3";

package proto;

option go_package = ".;proto";

// import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";


message Sample {
  google.protobuf.Timestamp timestamp = 1;
  repeated string values = 2;
}

message SampleKey {
  string machineID = 1;
  string property = 2;
}
message SampleValue {
  google.protobuf.Timestamp timestamp = 1;
  string value = 2;
}

message SplitSample {
  google.protobuf.Timestamp timestamp = 1;
  uint64 offset = 2;
  string key = 3;
  string value = 4;
  int64 duration = 5;
}

message SplitSamplePair {
  SplitSample first = 1;
  SplitSample second = 2;
}

message MachineState {
  map<string,string> properties = 4;
}
